gfx/layers/opengl/CompositorOGL.cpp
@@ -2147,9 +2147,6 @@ void CompositorOGL::CopyToTarget(DrawTarget* aTarget,
 void CompositorOGL::Pause() {
 #ifdef MOZ_WIDGET_ANDROID
   if (!gl() || gl()->IsDestroyed()) return;
-  gl()->MakeCurrent();
-  java::GeckoSurfaceTexture::DestroyUnused((int64_t)mGLContext.get());
-  java::GeckoSurfaceTexture::DetachAllFromGLContext((int64_t)mGLContext.get());
   // ReleaseSurface internally calls MakeCurrent
   gl()->ReleaseSurface();
 #elif defined(MOZ_WAYLAND)
