gfx/webrender_bindings/RenderTextureHost.h
@@ -22,7 +22,6 @@ class GLContext;
 
 namespace wr {
 
-class RenderAndroidSurfaceTextureHostOGL;
 class RenderDXGITextureHostOGL;
 class RenderBufferTextureHost;
 class RenderTextureHostOGL;
@@ -52,11 +51,6 @@ class RenderTextureHost {
   virtual void NotifyNotUsed() {}
 
   virtual RenderDXGITextureHostOGL* AsRenderDXGITextureHostOGL() {
-    return nullptr;
-  }
-
-  virtual RenderAndroidSurfaceTextureHostOGL*
-  AsRenderAndroidSurfaceTextureHostOGL() {
     return nullptr;
   }
 
